--- a/.travis.yml
+++ b/.travis.yml
@@ -22,27 +22,27 @@ before_install:
   - conda config --set always_yes yes
   - conda update conda
   - conda info -a
-  - travis_retry conda create -n test $CONDA jupyter nose pip
+  - travis_retry conda create -n test $CONDA jupyter pytest pip
   - source activate test
-  - travis_retry pip install coveralls
+  - travis_retry pip install codecov
 
 install:
   - export PYTHONWARNINGS=all
   - python setup.py install
 
 script:
-    # run coverage on py2.7, regular on others
+    # run coverage on py3.5, regular on others
   - which nosetests
   - which python
   - python -c "import octave_kernel"
   - if [[ $CONDA == python=2.7* ]]; then
-      nosetests --exe -v --with-doctest --with-cov --cover-package oct2py;
+      make test
       jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=python2 --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
     else
-      nosetests --exe -v oct2py;
+      make cover
       jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=python3 --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
     fi
   - make docs
 
 after_success:
-    - coveralls
+    - codecov
