Update nosetests invocation

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ script:
   - which python
   - python -c "import octave_kernel"
   - if [[ $CONDA == python=3.5* ]]; then
-      nosetests;
+      nosetests --exe -v --with-doctest oct2py
     else
-      nosetests;
+      nosetests --exe -v --with-doctest oct2py
     fi
   - jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=$KERNEL --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
   - make docs
