Clean up travis and makefile

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,17 +28,14 @@ before_install:
 
 install:
   - export PYTHONWARNINGS=all
-  - python setup.py install
+  - pip install -e .
 
 script:
     # run coverage on py3.5, regular on others
-  - which nosetests
-  - which python
-  - python -c "import octave_kernel"
   - if [[ $CONDA == python=3.5* ]]; then
-      nosetests --exe -v --with-doctest oct2py
+      make coverage;
     else
-      nosetests --exe -v --with-doctest oct2py
+      make test;
     fi
   - jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=$KERNEL --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
   - make docs
