--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ install:
 script:
     # run coverage on py3.5, regular on others
   - if [[ $CONDA == python=3.5* ]]; then
-      nosetests;
+      make cover;
     else
-      nosetests;
+      make test;
     fi
   - jupyter nbconvert --to notebook --execute --ExecutePreprocessor.kernel_name=$KERNEL --ExecutePreprocessor.timeout=60 --stdout example/octavemagic_extension.ipynb > /dev/null;
   - make docs
