Fix doctests and add test and docs to setup.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 
 install:
   - export PYTHONWARNINGS=all
-  - pip install -e .
+  - pip install -e .[test]
 
 script:
     # run coverage on py3.5, regular on others
