--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@
 language: python
 dist: trusty
 sudo: required
+cache:
+  apt: true
+  pip: true
 
 env:
     - CONDA="python=2.7 numpy>=1.11 scipy=0.17.0" KERNEL="python2"
