--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - export PYTHONWARNINGS=all
   - pip install -e .[test]
   - mkdir -p ~/.jupyter
-  - echo "c.ExecutePreprocessor.kernel_name='${KERNEL}' > ~/.jupyter/jupyter_nbconvert_config.py
+  - echo "c.ExecutePreprocessor.kernel_name='${KERNEL}'" > ~/.jupyter/jupyter_nbconvert_config.py
 
 script:
     # run coverage on py3.5, regular on others
