--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,8 @@ default = "final"
 [[tool.tbump.field]]
 name = "serial"
 default = 0
+
+[tool.pytest.ini_options]
+testpaths = oct2py
+addopts = --doctest-modules
+doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL
