--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,10 @@ build-backend = "setuptools.build_meta"
 [tool.jupyter-releaser]
 skip = ["check-links"]
 
+[tool.jupyter-releaser.hooks]
+before-build-python = ["sudo apt-get install -qq octave octave-signal liboctave-dev"]
+before-check-links = ["sudo apt-get install -qq octave octave-signal liboctave-dev"]
+
 [tool.tbump.version]
 current = "5.2.0"
 regex = '''
