--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Octave
       run: |
+        sudo apt-get update
         sudo apt-get install -qq octave octave-signal liboctave-dev
     - name: Install dependencies
       run: |
