fix setup fields

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,9 +5,9 @@ description = 'Python to GNU Octave bridge --> run m-files from python.'
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 license = MIT
-author = 'Steven Silvester'
-author_email = 'steven.silvester@ieee.org'
-url = 'http://github.com/blink1073/oct2py'
+author = Steven Silvester
+author_email = steven.silvester@ieee.org
+url = http://github.com/blink1073/oct2py
 classifiers =
     Development Status :: 5 - Production/Stable
     Intended Audience :: Developers
