--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,17 +20,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
+    - name: Base Setup
+      uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
     - name: Install Octave
       run: |
         sudo apt-get update
         sudo apt-get install -qq octave octave-signal liboctave-dev
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         make install
     - name: Run test
       run: |
