test with warning and fix resourcewarning

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,15 @@ install_requires =
     octave_kernel >= 0.34.0
 
 [options.extras_require]
-test = pytest;pandas;nbconvert
-docs = sphinx;sphinx-bootstrap-theme;numpydoc
+test =
+    pytest
+    pandas
+    nbconvert
+    pytest-timeout
+docs =
+    sphinx
+    sphinx-bootstrap-theme
+    numpydoc
 
 [bdist_wheel]
 universal=1
