--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,19 @@ default = 0
 
 [tool.pytest.ini_options]
 testpaths = "oct2py"
+addopts= "-raXs  --durations 10 --color=yes --doctest-modules"
 doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
+timeout = 300
+# Restore this setting to debug failures
+# timeout_method = "thread"
+filterwarnings= [
+  # Fail on warnings
+  "error",
+  # Ignore imp deprecation warnings from ipykernel
+  "ignore:the imp module is deprecated:DeprecationWarning",
+  # Ignore imp distutils warnings from ipykernel
+  "ignore:the distutils package is deprecated:DeprecationWarning",
+  # Ignore our own user warnings
+  "ignore:Using deprecated:UserWarning:oct2py",
+  "ignore:Key - value pairs:UserWarning:oct2py",
+]
