--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
   #   hooks:
   #     - id: isort
   #       files: \.py$
-        args: [--profile=black]
+        # args: [--profile=black]
 
   # - repo: https://github.com/pycqa/flake8
   #   rev: 4.0.1
