--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ test =
     pandas
     nbconvert
     pytest-timeout
+    pre-commit
 docs =
     sphinx
     sphinx-bootstrap-theme
@@ -53,4 +54,3 @@ upload-dir = docs/build/html
 
 [wheel]
 universal = 1
-
