--- a/setup.cfg
+++ b/setup.cfg
@@ -41,9 +41,6 @@ docs =
     sphinx-bootstrap-theme
     numpydoc
 
-[bdist_wheel]
-universal=1
-
 [build_sphinx]
 source-dir = docs
 build-dir  = docs/build
@@ -52,5 +49,20 @@ all_files  = 1
 [upload_sphinx]
 upload-dir = docs/build/html
 
-[wheel]
-universal = 1
+[flake8]
+ignore = E501, W503, E402
+builtins = c, get_config
+exclude =
+    .cache,
+    .github,
+    docs,
+    setup.py
+enable-extensions = G
+extend-ignore =
+    G001, G002, G004, G200, G201, G202,
+    # black adds spaces around ':'
+    E203,
+per-file-ignores =
+    # B011: Do not call assert False since python -O removes these calls
+    # F841 local variable 'foo' is assigned to but never used
+    tests/*: B011, F841
