clean up flake8 and version handling

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "oct2py"
+version = "5.5.1"
 description = "'Python to GNU Octave bridge --> run m-files from python.'"
 license = {text = "MIT"}
 authors = [{name = "Steven Silvester", email = "steven.silvester@ieee.org"}]
@@ -24,7 +25,6 @@ dependencies = [
     "scipy >=0.17",
     "octave_kernel >= 0.34.0",
 ]
-dynamic = ["version"]
 readme = "README.rst"
 
 [project.urls]
@@ -62,7 +62,15 @@ message_template = "Bump to {new_version}"
 tag_template = "v{new_version}"
 
 [[tool.tbump.file]]
+src = "pyproject.toml"
+version_template = '({major}, {minor}, {micro}, "{releaselevel}", {serial})'
+
+[[tool.tbump.file]]
 src = "oct2py/_version.py"
+version_template = '({major}, {minor}, {micro}, "{releaselevel}", {serial})'
+
+[[tool.tbump.file]]
+src = "docs/source/conf.py"
 version_template = '({major}, {minor}, {micro}, "{releaselevel}", {serial})'
 
 [[tool.tbump.field]]
