--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -45,6 +45,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Install Oct2py
+        run: make install
       - name: Generate Docs
         run: make docs
 
@@ -53,5 +55,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
+      - name: Install Oct2py
+        run: make install
       - name: Make sure the package is release-able
         run: make release_prep
