--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ test = [
 docs = [
     "sphinx",
     "sphinx-bootstrap-theme",
-    "numpydoc",
+    "myst-parser",
 ]
 
 [tool.jupyter-releaser]
@@ -71,6 +71,10 @@ version_template = '({major}, {minor}, {micro}, "{releaselevel}", "{serial}")'
 
 [[tool.tbump.file]]
 src = "docs/source/conf.py"
+version_template = '{major}.{minor}.{micro}{releaselevel}{serial}'
+
+[[tool.tbump.file]]
+src = "Makefile"
 version_template = '{major}.{minor}.{micro}{releaselevel}{serial}'
 
 [[tool.tbump.field]]
