--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,6 +54,7 @@ repos:
       - id: flake8
         additional_dependencies:
           ["flake8-bugbear==22.6.22", "flake8-implicit-str-concat==0.2.0"]
+        stages: [manual]
 
   - repo: https://github.com/sirosen/check-jsonschema
     rev: 0.18.1
