--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["flit_core >=3.2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["hatchling>=1.5"]
+build-backend = "hatchling.build"
 
 [project]
 name = "oct2py"
@@ -47,7 +47,7 @@ docs = [
 ]
 
 [tool.jupyter-releaser]
-skip = ["check-links", "check-manifest"]
+skip = ["check-links"]
 
 [tool.jupyter-releaser.hooks]
 before-build-python = ["sudo apt-get update", "sudo apt-get install -qq octave octave-signal liboctave-dev"]
