--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,3 @@
-ci:
-  skip: [check-jsonschema]
-
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -54,10 +51,11 @@ repos:
     hooks:
       - id: mdformat
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 5.0.4
+  - repo: https://github.com/john-hen/Flake8-pyproject
+    rev: 1.1.0.post0
     hooks:
-      - id: flake8
+      - id: Flake8-pyproject
+        alias: flake8
         additional_dependencies:
           ["flake8-bugbear==22.6.22", "flake8-implicit-str-concat==0.2.0"]
         stages: [manual]
@@ -70,3 +68,4 @@ repos:
         files: ^\.github/workflows/
         types: [yaml]
         args: ["--schemafile", "https://json.schemastore.org/github-workflow"]
+        stages: [manual]
