--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ filterwarnings= [
   # Ignore our own user warnings
   "ignore:Using deprecated:UserWarning:oct2py",
   "ignore:Key - value pairs:UserWarning:oct2py",
-  "module:Jupyter is migrating its paths:DeprecationWarning:jupyter_core",
+  "module:Jupyter is migrating its paths:DeprecationWarning",
 ]
 
 [tool.flake8]
