--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,7 +63,7 @@ jobs:
           hatch run typing:test
           hatch run lint:style
           pipx run 'validate-pyproject[all]' pyproject.toml
-          pipx run doc8 --max-line-length=200
+          pipx run doc8 --max-line-length=200 docs/source *.md
 
   check_links:
     runs-on: ubuntu-latest
