--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,13 +52,18 @@ jobs:
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
       - run: pip install hatch; hatch run docs:build
 
-  pre-commit:
-    name: pre-commit
+  test_lint:
+    name: Test Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: jupyterlab/maintainer-tools/.github/actions/base-setup@v1
-      - uses: jupyterlab/maintainer-tools/.github/actions/pre-commit@v1
+      -  name: Run Linters
+         run: |
+          hatch run typing:test
+          hatch run lint:style
+          pipx run 'validate-pyproject[all]' pyproject.toml
+          pipx run doc8 --max-line-length=200 docs/source *.md
 
   check_links:
     runs-on: ubuntu-latest
